'Presented' version. Potential remaining issues - blurry text after changing color, getting an annotation's context menu after rotating 90 wrt the anno's original location.